# clinical-monitoring-copilot

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  startup.py
backend/app/prompts/: analyze_completeness.md  analyze_eligibility.md  draft_query_letter.md  extract_protocol.md  summarize_protocol.md
backend/app/routes/: admin.py  analyses.py  audit.py  datasets.py  findings.py  protocols.py
backend/app/services/: audit.py  dataset_loader.py  digest.py  finding_chat.py  llm_client.py  nl_filter.py  protocol_parser.py  protocol_summary.py  query_letter.py  report_pdf.py
backend/app/services/analyzers/: base.py  completeness.py  eligibility.py  plausibility.py  visit_windows.py
backend/scripts/: benchmark.py
backend/tests/: conftest.py  test_amendment_diff.py  test_audit.py  test_completeness.py  test_dataset_loader.py  test_digest.py  test_eligibility.py  test_finding_chat.py  test_finding_workflow.py  test_grouped_findings.py  test_llm_client.py  test_models.py  test_nl_filter.py  test_plausibility.py  test_protocol_parser.py  test_protocol_spec_patch.py  test_protocol_summary.py  test_query_letter.py  test_report_pdf.py  test_routes.py  test_site_rollup.py  test_subject_drilldown.py  test_vision_fallback.py  test_visit_windows.py
backend/tests/fixtures/: mini_protocol.txt  mini_protocol_spec.json
backend/tests/fixtures/mini_dataset/: dm.csv  sv.csv  vs.csv
data/: generate_synthetic.py  (+1 more)
(+63 files in other folders)
